Web MIDI: fix a deadlock issue on unloading some input devices

After disconnecting some input devices, the next midiInGetNumDevs()
call invokes a callback with MIM_LONGDATA for the disconnected device,
and never returns until the callback completes.
This is unexpected control dependency, and causes a deadlock.

BUG=725448

Change-Id: I39733e4df31223de8f2b7f8e031711496e10ff4a