media/midi/midi_manager_win.cc
@@ -148,6 +148,37 @@ void RunTask(int instance_id, const base::Closure& task) {
 // TODO(toyoshim): Factor out TaskRunner related functionaliries above, and
 // deprecate MidiScheduler. It should be available via MidiManager::scheduler().
 
+// Obtains base::Lock instance pointer to protect |g_system_call_thread_id|.
+base::Lock* GetSystemCallThreadLock() {
+  static base::Lock* lock = new base::Lock;
+  return lock;
+}
+
+// Holds a thread id that calls midiInGetNumDevs() now. We use a platform
+// primitive to identify the thread because IsRunningOnSystemCallThread() can
+// be called on a thread that Windows allocates internally, and Chrome or //base
+// library does not know.
+base::PlatformThreadId g_system_call_thread_id;
+
+// Prepares to call midiInGetNumDevs().
+void EnterSystemCall() {
+  base::AutoLock lock(*GetSystemCallThreadLock());
+  g_system_call_thread_id = base::PlatformThread::CurrentId();
+}
+
+// Finalizes to call midiInGetNumDevs().
+void LeaveSystemCall() {
+  base::AutoLock lock(*GetSystemCallThreadLock());
+  g_system_call_thread_id = base::PlatformThreadId();
+}
+
+// Checks if the current thread is running midiInGetNumDevs(), that means
+// current code is invoked inside midiInGetNumDevs().
+bool IsRunningOnSystemCallThread() {
+  base::AutoLock lock(*GetSystemCallThreadLock());
+  return base::PlatformThread::CurrentId() == g_system_call_thread_id;
+}
+
 // Utility class to handle MIDIHDR struct safely.
 class MIDIHDRDeleter {
  public:
@@ -319,7 +350,9 @@ class MidiManagerWin::InPort final : public Port {
       MidiManagerWin* manager,
       int instance_id) {
     std::vector<std::unique_ptr<InPort>> ports;
+    EnterSystemCall();
     const UINT num_devices = midiInGetNumDevs();
+    LeaveSystemCall();
     for (UINT device_id = 0; device_id < num_devices; ++device_id) {
       MIDIINCAPS2W caps;
       MMRESULT result = midiInGetDevCaps(
@@ -579,7 +612,14 @@ MidiManagerWin::PortManager::HandleMidiInCallback(HMIDIIN hmi,
 
   // Use |g_task_lock| so to ensure the instance can keep alive while running,
   // and to access member variables that are used on TaskRunner.
-  base::AutoLock task_lock(*GetTaskLock());
+  // Exceptionally, we do not take the lock when this callback is invoked inside
+  // midiInGetNumDevs() on the caller thread because the lock is already
+  // obtained by the current caller thread.
+  std::unique_ptr<base::AutoLock> task_lock;
+  if (IsRunningOnSystemCallThread())
+    GetTaskLock()->AssertAcquired();
+  else
+    task_lock.reset(new base::AutoLock(*GetTaskLock()));
   {
     base::AutoLock lock(*GetInstanceIdLock());
     if (instance_id != g_active_instance_id)
